searc add filter and api yml updates
